syntax = "proto3";

message Empty {}

message User {
  int32 id = 1;
  string name = 2;
}

message Credentials {
  string token = 1;
  User user = 2;
  int64 expiresIn = 3;
}

message ValidationParams {
  string token = 1;
}

service TomatoService {
  rpc validateToken(ValidationParams) returns (Credentials);
}